# qpf

./: .gitignore  CMakeLists.txt  Changelog.md  FILE-VERSIONS  GPATH  GRTAGS  GTAGS  INSTALL.md  QPF-metrics.xlsx  QPF.metrix++.file  QPF.metrix++.struct  QPF.pro  README.md  TAGS  VERSION  common.cmake  defaults.pri  env.sh  ext.cmake  h  k  log.xml  logfile  logsvn.xml  metrixpp.db  pmccabe-lines.txt  version.h  ~$QPF-metrics.xlsx
fmk/: CMakeLists.txt  channels.h  cntrmng.cpp  cntrmng.h  component.cpp  component.h  config.cpp  config.h  datamng.cpp  datamng.h  datatypes.cpp  datatypes.h  dbhdl.h  dbhdlpostgre.cpp  dbhdlpostgre.h  dckmng.cpp  dckmng.h  euclid.h  evtmng.cpp  evtmng.h  except.h  filenamespec.cpp  filenamespec.h  fitsmetadatareader.cpp  fitsmetadatareader.h  hostinfo.cpp  hostinfo.h  httpserver.cpp  httpserver.h  logmng.cpp  logmng.h  master.cpp  master.h  message.h  metadatareader.h  procinfo.cpp  procinfo.h  srvmng.cpp  srvmng.h  tskage.cpp  (+7 more)
libcomm/: CMakeLists.txt  ChangeLog.md  commnode.cpp  commnode.h  common.h  counter.cpp  counter.h  error.h  libcomm.pro  log.cpp  log.h  propdef.h  r2rpeer.cpp  r2rpeer.h  statem.cpp  statem.h  thread.cpp  thread.h  tools.cpp  tools.h  version.h
log/: log.h  (+2 more)
nncomm/: CMakeLists.txt  bus.cpp  pair.cpp  pipeline.cpp  pubsub.cpp  reqrep.cpp  scalprotrole.cpp  scalprotrole.h  survey.cpp
qpf/: CMakeLists.txt  deployer.cpp  deployer.h  init.h  main.cpp  qpf.pro  version.h
qpfgui/: .tramp_history  CMakeLists.txt  browser.cpp  configtool.cpp  configtool.h  configtool.qrc  configtool.ui  dbbrowser.cpp  dbbrowser.h  dbmng.cpp  dbmng.h  dbtblmodel.cpp  dbtblmodel.h  dbtreemodel.cpp  dbtreemodel.h  dlgalert.cpp  dlgalert.h  dlgdataing.cpp  dlgdataing.h  dlgshowtaskinfo.cpp  dlgshowtaskinfo.h  dlgshowtaskinfo.ui  exttooledit.cpp  exttooledit.h  exttoolsdef.cpp  exttoolsdef.h  frm_filter.cpp  frm_filterset.cpp  frmagentstatus.cpp  frmagentstatus.h  hmipxy.cpp  hmipxy.h  hmitypes.h  icon.qrc  init.h  jsontree.qrc  logframe.cpp  logframe.h  logwatcher.cpp  logwatcher.h  (+36 more)
qpfhmi/: CMakeLists.txt  acthdl.cpp  acthdl.h  anasession.cpp  anasession.h  app.cpp  app.h  archivemodel.cpp  archivemodel.h  archivetree.cpp  archivetree.h  browser.cpp  browser.h  configtool.cpp  configtool.h  configtool.qrc  configtool.ui  connectionwidget.cpp  connectionwidget.h  conthostedit.cpp  conthostedit.h  conthostedit.ui  dbbrowser.cpp  dbbrowser.h  dbbrowser.ui  dbmng.cpp  dbmng.h  dbtblmodel.cpp  dbtblmodel.h  dbtreemodel.cpp  dbtreemodel.h  deployer.cpp  deployer.h  dlgalert.cpp  dlgalert.h  dlgdataing.cpp  dlgdataing.h  dlgqdtfilter.cpp  dlgqdtfilter.h  dlgqdtfilter.ui  (+100 more)
sample/nncomm/: CMakeLists.txt
sdc/: CMakeLists.txt  array.cpp  array.h  dict.cpp  dict.h  sdc.h  sdc.pro  value.cpp  value.h  valueio.h  valueiojsoncpp.cpp  valueiojsoncpp.h
src/: CMakeLists.txt  alert.cpp  alert.h  cfg.h  cfginfo.cpp  cfginfo.h  common.h  component.cpp  component.h  config.cpp  config.h  datamng.cpp  datamng.h  datatypes.cpp  datatypes.h  dbg.cpp  dbg.h  dbhdl.h  dbhdlpostgre.cpp  dbhdlpostgre.h  dwatcher.cpp  dwatcher.h  error.h  euclid.h  evtmng.cpp  evtmng.h  except.cpp  except.h  filenamespec.cpp  filenamespec.h  filetransfer.cpp  filetransfer.h  genfhdl.h  jsonfhdl.cpp  jsonfhdl.h  logmng.cpp  logmng.h  main-alert.cpp  msgtypes.h  procelem.cpp  (+18 more)
tests/: CMakeLists.txt  CMakeLists.txt.gtest  GenerateEmptyUnitTestFiles.sh  cls2test.sh  gentests.sh  main.cpp  tests.pro
tests/dwe/: dwe_test.cpp
tests/filehdl/: test_GenericFileHandler.cpp  test_GenericFileHandler.h  test_JsonFileHandler.cpp  test_JsonFileHandler.h  test_QDTReportHandler.cpp  test_QDTReportHandler.h
tests/fmk/: test_CfgGrpConnectivity.cpp  test_CfgGrpConnectivity.h  test_CfgGrpDB.cpp  test_CfgGrpDB.h  test_CfgGrpFlags.cpp  test_CfgGrpFlags.h  test_CfgGrpGeneral.cpp  test_CfgGrpGeneral.h  test_CfgGrpIPython.cpp  test_CfgGrpIPython.h  test_CfgGrpJupyter.cpp  test_CfgGrpJupyter.h  test_CfgGrpNetwork.cpp  test_CfgGrpNetwork.h  test_CfgGrpOrchestration.cpp  test_CfgGrpOrchestration.h  test_CfgGrpProducts.cpp  test_CfgGrpProducts.h  test_CfgGrpRulesList.cpp  test_CfgGrpRulesList.h  test_CfgGrpSwarm.cpp  test_CfgGrpSwarm.h  test_CfgGrpUserDefToolsList.cpp  test_CfgGrpUserDefToolsList.h  test_CfgGrpVOSpace.cpp  test_CfgGrpVOSpace.h  test_Component.cpp  test_Component.h  test_Config.cpp  test_Config.h  test_ContainerMng.cpp  test_ContainerMng.h  test_DBHandler.cpp  test_DBHandler.h  test_DBHdlPostgreSQL.cpp  test_DBHdlPostgreSQL.h  test_DataMng.cpp  test_DataMng.h  test_DockerMng.cpp  test_DockerMng.h  (+52 more)
tests/infix/: test_infixeval.cpp  test_infixeval.h
tests/libcomm/: test_commnode.cpp  test_commnode.h  test_log.cpp  test_log.h  test_r2rpeer.cpp  test_r2rpeer.h  test_statem.cpp  test_statem.h  test_thread.cpp  test_thread.h  test_tools.cpp  test_tools.h
tests/log/: test_Log.cpp  test_Log.h
tests/nncomm/: test_Bus.cpp  test_Bus.h  test_CommNode.cpp  test_CommNode.h  test_Pair.cpp  test_Pair.h  test_Pipeline.cpp  test_Pipeline.h  test_ProtocolLayer.cpp  test_ProtocolLayer.h  test_PubSub.cpp  test_PubSub.h  test_ReqRep.cpp  test_ReqRep.h  test_ScalabilityProtocolRole.cpp  test_ScalabilityProtocolRole.h  test_Survey.cpp  test_Survey.h
tests/qpf/: test_Deployer.cpp  test_Deployer.h
tests/qpfhmi/: test_app.cpp  test_app.h  test_archivemodel.cpp  test_archivemodel.h  test_configtool.cpp  test_configtool.h  test_deployer.cpp  test_deployer.h  test_dlgshowtaskinfo.cpp  test_dlgshowtaskinfo.h  test_frmagentstatus.cpp  test_frmagentstatus.h  test_hmipxy.cpp  test_hmipxy.h  test_logframe.cpp  test_logframe.h  test_logwatcher.cpp  test_logwatcher.h  test_main.cpp  test_main.h  test_mainwindow.cpp  test_mainwindow.h  test_progbardlg.cpp  test_progbardlg.h  test_simindata.cpp  test_simindata.h  test_taskmonmodel.cpp  test_taskmonmodel.h  test_textview.cpp  test_textview.h  test_types.cpp  test_types.h
tests/sdc/: test_array.cpp  test_array.h  test_dict.cpp  test_dict.h  test_value.cpp  test_value.h  test_valueiojsoncpp.cpp  test_valueiojsoncpp.h
vos/: .tramp_history  CMakeLists.txt  voshdl.cpp  voshdl.h
(+440 files in other folders)
